fix hero overflow

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -194,7 +194,7 @@ div.responsiveNav a:hover {
 section#hero {
   background: -webkit-gradient(linear, left top, left bottom, from(#00338E), to(#001130));
   background: linear-gradient(180deg, #00338E 0%, #001130 100%);
-  height: 60vh;
+  height: 570px;
 }
 
 section#hero div.wrap {
@@ -534,7 +534,7 @@ section#newsletter footer a:hover {
             align-items: center;
   }
   section#hero div.wrap img {
-    max-width: calc(100vw / 1.5);
+    max-width: calc(100vw / 1.7);
   }
   section#hero div.wrap header h1 {
     font-size: 15vw;
