--- a/styles/scss/_hero.scss
+++ b/styles/scss/_hero.scss
@@ -1,6 +1,6 @@
 section#hero {
   background: linear-gradient(180deg, #00338E 0%, #001130 100%);
-  height: 60vh;
+  height: 570px;
   
 
   div.wrap {
