--- a/styles/scss/_media.scss
+++ b/styles/scss/_media.scss
@@ -25,7 +25,7 @@
       align-items: center;
 
       img {
-        max-width: calc(100vw / 1.5)
+        max-width: calc(100vw / 1.7)
       }
 
       header {
